[#217] Fix: Redis 캐시 역직렬화 오류 수정 (toList → Collectors.toList)
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>